Removed the two tones of grey from the code snippets, fixed the width of the page content when stretched out, reintroduced the search bar, set new metadata in the head tag according to spiff.com and set new sizes for each heading

--- a/scss/theme/_custom.scss
+++ b/scss/theme/_custom.scss
@@ -1,14 +1,34 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap');
 
-h1 {
-    text-align: left;
-    font-weight: 500;
-    font-size: 42px;
-}
-
 h1, h2, h3, h4, h5, h6 {
     font-family: Roboto;
     color: #1f1a47;
+    text-align: left;
+    letter-spacing: 0px;
+}
+
+h1 {
+	font-size: 32px;
+}
+
+h2 {
+	font-size: 20px;
+}
+
+h3 {
+	font-size: 18px;
+}
+
+h4 {
+	font-size: 14px;
+}
+
+h5 {
+	font-size: 10px;
+}
+
+h6 {
+	font-size: 8px;
 }
 
 #body {
@@ -17,7 +37,6 @@ h1, h2, h3, h4, h5, h6 {
 
 body {
     font-family: Roboto;
-    min-height: 100%;
     letter-spacing: 0px;
 
     #breadcrumbs {
@@ -48,7 +67,11 @@ body {
     background-color: white;
     width: 255px;
     border-right: 1px solid #d6d9db;
-    height: 100%;
+
+    .padding {
+        max-width: 1000px;
+        margin: 0 auto;
+    }
 
     .title-img {
         max-width: 120px;
@@ -112,6 +135,8 @@ a {
     padding-top: 15px;
     padding-left: 55px;
     padding-bottom: 33px;
+    max-width: 1000px;
+    margin: 0 auto;
 }
 
 #body-inner {
@@ -120,4 +145,37 @@ a {
 
 p {
     font-size: 16px;
+}
+
+pre {
+    background: #F0F0F0;
+}
+
+.searchbox {
+
+    border: 1px solid #c1c1c1;
+
+    span {
+        color: #6973864a;
+        &:hover {
+           color: #69738694
+        }
+    }
+
+    label {
+        color: #69738694;
+    }
+
+    input {
+        color: #555;
+        background: #f7fafc;
+
+        @include placeholder {
+            color: #6973864a;
+        }
+    }
+}
+
+.highlightable {
+    padding: 16px 0 16px;
 }
